# genome

./: .gitignore  CMakeLists.txt  LICENSE  board.cpp  board.h  bot.h  graphic.cpp  graphic.h  graphic.ui  imagew.cpp  imagew.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mandelbrot.pro  renderthread.cpp  renderthread.h
src/: board.cpp  board.h  bot.cpp  bot.h  imagew.cpp  imagew.ui  main.cpp  mainwindow.cpp  mainwindow.h  renderthread.cpp  renderthread.h
tools/: code_parser.py
